# ChronoVision

./: .env.example  .gitignore  Dockerfile  README.md  agents.md  architecture.md  docker-compose.dev.yml  docker-compose.yml  futureplan.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1  stop.ps1
app/: config.py  image_validator.py  main.py  monitoring.py  prompts.py  rate_limiter.py  retention.py  storage.py  tasks.py  usage.py
scripts/: backup.ps1  capture_webcam.ps1  install_ffmpeg.ps1  validate_data.ps1  vision_tray.ps1
tests/: test_auth.py  test_config.py  test_range_summary.py  test_rate_limiter.py  test_records.py  test_retention.py  test_storage.py  test_story_highlights.py  test_tasks.py
web/: app.js  index.html  styles.css
